syntax = "proto3";
package erc20mgr;

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/datachainlab/fabric-besu-cross-demo/contracts/erc20/erc20mgr/types";
option (gogoproto.goproto_getters_all) = false;

message FabricAccount {
  string mspId = 1  [(gogoproto.casttype) = "MSPID"];
  string clientId = 2 [(gogoproto.casttype) = "ClientID"];
}

message Params {
  option (gogoproto.goproto_stringer)       = false;
  string admin = 1 [(gogoproto.moretags) = "yaml:\"admin,omitempty\""];
  bool isSetAdmin = 2 [(gogoproto.moretags) = "yaml:\"is_set_admin,omitempty\""];
}

message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
}

message ContractCallRequest {
  string method = 1;
  repeated string args = 2;
}

message Balance {
  string id = 1 [(gogoproto.casttype) = "ID"];
  int64 amount = 2;
}
